# math-solver

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
include/: main.h  mathsolver.h  test_utils.h
src/: main.c  mathsolver.c
tests/: expression_round.c  format_round.c  inflate_depth.c  inflate_round.c  parse_add.c  parse_add_complex.c  parse_div.c  parse_div_complex.c  parse_ge.c  parse_le.c  parse_mul.c  parse_mul_complex.c  parse_mul_implicit.c  parse_neq.c  parse_number.c  parse_sub.c  parse_sub_complex.c  parse_subscript.c  parse_variable.c  parse_varop.c  reduce_implicit_mul.c  simple_round.c  simplify_factors.c  standardize_implicit_mul.c  standardize_subadd.c  variable_inline_none.c  variable_inline_one.c  variable_table_none.c  variable_table_one.c
